--- a/Example/pytest.ini
+++ b/Example/pytest.ini
@@ -1,10 +1,12 @@
 [pytest]
 markers =
     smoke: smoke marker
-    regress: regress marker
+    regression: regression marker
+    profile: profile marker
 
 addopts =
     -sv
+    --clean-alluredir
     --reruns=2
     --only-rerun TimeoutException
     --only-rerun HTTPSConnectionPool
